/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Thomas Wallsmith
 */

package baseline;

import java.util.Date;
import java.util.GregorianCalendar;

public class ToDoEntry {

    private String description;
    private String dueDate;
    private boolean status;         // true = completed, false

    public ToDoEntry(String description, String dueDate) {

        // this.description = description
        // this.dueDate = dueDate
        // this.status = false

    }

    public String getDescription() {

        // return description

        return "";
    }

    public void setDescription(String description) {

        // this.description = description

    }

    public String getDueDate() {

        // return dueDate

        return "";
    }

    public void setDueDate(GregorianCalendar dueDate) {

        // this.dueDate = duedate

    }

    public void setStatus(boolean value) {

        // this.status = value

    }

    public boolean getStatus() {

        // return status

        return true;
    }

}
